PROTON-269: fixed redirect accessors to do proper lookups

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1456100 13f79535-47bb-0310-9956-ffa450edef68